# con-environment

./: .gitignore  .sops.yaml  Cargo.toml  Tiltfile  flake.nix
crates/hub/: Cargo.toml  workshop.yaml
crates/hub/src/: auth.rs  config.rs  default_index.html  error.rs  error_503.html  gc.rs  main.rs  orchestrator.rs  proxy.rs  service.rs
crates/hub/src/orchestrator/: definition.rs  mod.rs  pod.rs
crates/hub/src/tests/: config.rs  gc.rs  helpers.rs  integration.rs
crates/hub/templates/: 404-error.html  at_capacity.html  base.html  error.html  index.html  login.html  pending.html
crates/inspector/src/: main.rs
crates/sidecar/src/: config.rs  http_server.rs  main.rs  proxy.rs  tests.rs
deployment/: secrets.yaml
nix/: container_scripts.nix  dev_shell.nix  talos-config.nix
nix/dev_shell/: container_repository.nix  patches.nix  talos.nix
nix/kube/: vllm-model-store.nix
nix/nas/: configuration.nix  inspector.nix  install_guide.md  patches.nix  pxe-boot.nix  talos-config.nix  talos-image.nix  talos-iso.nix
nix/patches/: cilium.nix  control.yaml  ghcr.nix  install.yaml  manifest.nix  model-store.nix  nfs.nix  nvidia.nix
nix/patches/control/: install.yaml
nix/patches/worker/: install.yaml  nvidia_kernel.yaml
setup/k8/: model-proxy.yaml  nfs-pvc.yaml  workshop.yaml
workshops/adv-exemples/notebooks/: Dockerfile  deep-networks.ipynb  e2e_malware_evasion.ipynb  requirements.txt
workshops/email-indirect/: README.md  dev.yaml
workshops/email-indirect/calendar/: Dockerfile  service.py
workshops/yolo-l2/: dev,yaml  dev.yaml  workshop.yaml
(+7 files in other folders)
