[package]
name = "hub"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web server and routing
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1.36", features = ["full"] }
pingora = { version = "0.6.0", features = ["lb", "proxy"] }
async-trait = "0.1.89"
bytes = "1.11.0"
uri = "0.4.0"

# Kubernetes client
kube = { version = "2.0", features = ["runtime", "derive"] }
kube-runtime = "2.0"
k8s-openapi = { version = "0.26.0", features = ["v1_34"] }

# Authentication (JWT)
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

# Logging and Errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"

# For GC health checks
reqwest = { version = "0.12.2", features = ["json"] }

# Utilities
futures-util = "0.3"
rand = "0.9.2"
tower-http = { version = "0.6.6", features = ["trace"] }
chrono = "0.4.42"
tower = "0.5.2"
serde_urlencoded = "0.7.1"
tower-cookies = "0.11.0"
serde_yaml = "0.9.34"
papaya = "0.2.3"
askama = "0.15.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tracing-test = "0.2.5"
futures = "0.3.31"
